# fundamentus_hub

./: .gitignore  README.md  main.py  pyproject.toml
downloader/: handler.py
fundamentus_hub/dashboard/: __init__.py  footer.py  index.py  indicator.py
fundamentus_hub/dashboard/widgets/: help_texts.py  indicator_metrics.py  stock_indicators.py
fundamentus_hub/downloader/: handler.py  requester.py
fundamentus_hub/downloader/interfaces/: handler.py  requester.py
fundamentus_hub/utilities/: categories.py  configuration.py  humanizer.py
