[tool.poetry]
name = "Fundamentus Hub"
version = "0.0.1"
description = "Este projeto cria um dashboard utilizando a API pyfundamentus para exibir os principais indicadores financeiros das empresas listadas na B3, facilitando a análise fundamentalista através de visualizações claras e acessíveis para investidores e analistas."
authors = ["Alexsander Lopes Camargos <alexcamargos@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyfundamentus = "^0.0.10"
streamlit = "^1.38.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
